--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ li .link:hover{
 }
 .header-title button a{
   font-family: 'Open Sans', sans-serif;
-  color:black;
+  color:white;
   text-decoration: none;
 }
 .header-title{
